Implement frontend and integrated with APIs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,7 @@ TAVILY_API_KEY=your_tavily_api_key_here
 # Google Drive API Configuration
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_REDIRECT_URI=http://localhost:3001/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:3001
 
 # ChromaDB Configuration
 CHROMA_URL=http://localhost:8000
