--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.9",
     "axios": "^1.13.5",
     "better-sqlite3": "^12.6.2",
     "cheerio": "^1.2.0",
