feat: updated README and .env.example with architecture details and Chroma Cloud configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ GOOGLE_REDIRECT_URI=http://localhost:3001
 
 # ChromaDB Configuration
 CHROMA_URL=http://localhost:8000
+CHROMA_CLOUD_API_KEY=your_chromadb_api_key_here
+CHROMA_CLOUD_TENANT=your_chromadb_tenant_id_here
+CHROMA_CLOUD_DATABASE=your_chromadb_database_name_here
